--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 8080:8080
     volumes:
       - .:/app
-      - $GOROOT/pkg/mod:/go/pkg/mod
+      #- $GOROOT/pkg/mod:/go/pkg/mod
     working_dir: /app
     command: bash -c "./scripts/wait.sh kafka:9092 rabbitmq:5672 grafana:3000 && go run ./cmd"
     env_file:
